# vigenere-chiffre

./: .gitignore  CMakeLists.txt  README.md  bfdecrypt.c  crack.c  decrypt.c  encrypt.c
common/: common.h
crypt/: crypt.c  crypt.h
input/bfdecrypt/: input.txt
input/crack/: cracked_cleartext.txt
input/decrypt/: input.txt
input/encrypt/: input.txt
src/: common.c  crypt.c
